crates/check_cli/tests/snapshots/main_cases_reporter_gitlab/reports_diagnostics_gitlab_ci_command.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
[
  {
    "description": "This import is unused.",
    "check_name": "lint/correctness/noUnusedImports",
    "fingerprint": "12247285991248580551",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "description": "Several of these imports are unused.",
    "check_name": "lint/correctness/noUnusedImports",
    "fingerprint": "15587197597897976171",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "11560602666260894730",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "3378636030374148952",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "1217643363874050521",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 16
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "4133571069805885280",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 17
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "5071171301459682706",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 18
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "228646201265839522",
    "severity": "major",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 19
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "1113933937129958476",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 19
      }
    }
  },
  {
    "description": "This import is unused.",
    "check_name": "lint/correctness/noUnusedImports",
    "fingerprint": "15775822807811823621",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "description": "Several of these imports are unused.",
    "check_name": "lint/correctness/noUnusedImports",
    "fingerprint": "16065251496309878442",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "17581182407618726497",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "7876075472853952714",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "9844529903890075314",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 16
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "13391528371208812095",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 17
      }
    }
  },
  {
    "description": "This variable f is unused.",
    "check_name": "lint/correctness/noUnusedVariables",
    "fingerprint": "17201637410894263274",
    "severity": "major",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 18
      }
    }
  },
  {
    "description": "The imports and exports are not sorted.",
    "check_name": "assist/source/organizeImports",
    "fingerprint": "4789482553704082688",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "13204486605360217019",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 17
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "8601445511714044637",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 18
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "7842353260163629265",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 19
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "8145265504203493155",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "9497329216962766751",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 6
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "18366180239442454213",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 7
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "13874281744783264721",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 9
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "3077767001374933992",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "15654042585868945756",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 11
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "13936915970079861829",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 12
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "2162620893763553997",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "1339939023879653211",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "18285621777301161439",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 16
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "10582308848964879795",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 17
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "1645910940962206533",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 18
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "9066604216297977404",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 19
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'z'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "8595162422023295635",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "4835254919265693190",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "3103625193263367010",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 16
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "17264185503232320851",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 4
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "1649488708621366899",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 12
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "5606951167272714146",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "5567686698145153289",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "12478924188343149788",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 16
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "12221078446259530036",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 17
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "16715583845852699027",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 18
      }
    }
  },
  {
    "description": "This variable implicitly has the any type.",
    "check_name": "lint/suspicious/noImplicitAnyLet",
    "fingerprint": "97210195248059969",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 19
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'z'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "4177467054814594004",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "710662920264236176",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "11240683920503391137",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 16
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "14476601875768703957",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 17
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "16119156397775465086",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 18
      }
    }
  },
  {
    "description": "Shouldn't redeclare 'f'. Consider to delete it or rename it.",
    "check_name": "lint/suspicious/noRedeclare",
    "fingerprint": "16860125444609679494",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 19
      }
    }
  },
  {
    "description": "The imports and exports are not sorted.",
    "check_name": "assist/source/organizeImports",
    "fingerprint": "71463377061397589",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "6143155163249580709",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 4
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "16004470298861036684",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "6844513959367944349",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 6
      }
    }
  },
  {
    "description": "Using == may be unsafe if you are relying on type coercion.",
    "check_name": "lint/suspicious/noDoubleEquals",
    "fingerprint": "3753031813987153088",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 7
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "12725857318666866021",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 9
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "17763028641383623546",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "description": "This is an unexpected use of the debugger statement.",
    "check_name": "lint/suspicious/noDebugger",
    "fingerprint": "4368420040174731745",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 11
      }
    }
  }
]
```
